Fixed image carousel issues on mobile

--- a/src/app/image-carousel/image-carousel.component.css
+++ b/src/app/image-carousel/image-carousel.component.css
@@ -1,12 +1,8 @@
 .img-wrapper {
     text-align: center;
-}
-
-img {
+  }
+  
+  img {
     height: 500px;
     object-fit: contain;
-}
-
-.carousel:hover .carousel-control-next-icon {
-    color: black;
-}
+  }
